src/index.css
* {
  box-sizing: border-box;
}

html {
  position: relative;
  min-height: 100%;
  }

body {
  background-size: cover;
  background-attachment: fixed;
  background-color: #ff0d7b;
}

body, html {
  height: 100%;
  padding: 0;
  margin: 0 0 100px; 
  font-family: 'Quicksand', sans-serif;
  font-weight: 400;
  color: #fff;
  font-size: 18px;
  line-height:30px ;
}

button {
  background-color: #0067e8;
  border: 0;
  padding: 5px;
  color: white;
  font-weight: bold;
  transition: background-color .1s;
  cursor: pointer;
  border-radius: 5px;
  font-size: 16px;
}

button:hover {
  background-color: yellow;
  color: #ff0d7b;
}

textarea, input {
  padding: .5%;
  border-radius: 5px;
  border: 1px solid #ccc;
  height: 30px;
  width: 100%;
}

textarea:focus, input:focus {
  outline: none;
  border: 2px solid #eaef3a;
}

textarea {
  width: 100%;
  min-height: 200px;
  font-size: 15px;
}

form {
  width:100%;
}

form > div {
  margin-bottom: 2%;
}

form label {
  display: block;
}

header {
  height: 85px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1%;
  background-color: #ff0d7b;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  z-index: 9999;
}

.head-container {
  width: 80%;
  display: flex;
  justify-content: center;
  align-items: center; 
}

.right {
  width: 60%;
  text-align:left;
}

.right a {
  color: #fff;
}

.right a:hover {
  color: #fff;
}

header h1 a {
  font-family: 'Quicksand', sans-serif;
  font-weight: 500;
  font-size: 30px;
  color: #fff;
  letter-spacing: 2px;
  padding: 0px;
  width:33%;
}
h1 {
  min-width: 220px;
  padding-right: 5px;
  padding-left:5px;
}

h2 {
  color:  #fff;
  text-align: center;
  font-size: 50px;
}

h3 {
  font-size: 150%;
  margin-bottom: 5px;
  letter-spacing: 2px;
}

header h1 a:hover {
  color:#fff !important;
}

.headmini {
  font-size: 30px;
  font-family: 'Quicksand', sans-serif;
  font-weight: 500;
  margin-right: 0px;
  margin-left: 0px;
  padding: 0px;
  color: #fff;
}

nav {
  font-weight: normal;
  /* width:60%; */
  text-align:right;
  padding: 0px;
  padding-top: 15px;
  letter-spacing: 2px;
}

ul {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  margin-top: 5px;
  padding: 0px;
}

nav li , .navlink {
  color: #fff;
  font-size: 18px;
  padding-left: 20px;
  text-decoration: none;
  transition: color .5s;

}

nav  li:hover ,.navLink ,.active {
  color: #eaef3a;
}


a {
  text-decoration: none;
  color: #fff;
  font-weight: bold;
  transition: color .5s;
  cursor: pointer;
}

a:hover {
  color: #eaef3a;
}

a.project-links {
  color: #ff0d7b;

}

a.project-links:hover {
  color: #0067e8;

}

main {
  padding: 0% 25%;
  z-index: 8000;
  position: relative;
  background-color: #ff0d7b;
  background-attachment: fixed;
  background-size: cover;
  display: flex;
  justify-content: center;
}

.dani-image {
  height: 150px; 
  border-radius: 50%;
  border: solid 1px #ff0d7b;
  box-shadow: 0px 0px 30px 20px #eaef3a;
  text-align: center;
}

.about-container {
  max-width: 550px;
  min-width: 200px;
}

.laptop {
  width: 250px;
  text-align: center;
  padding-top: 40px;
}

p.center {
  text-align: center;
}


section {
  background-attachment: scroll;
  padding: 10px 10px;
} 


.byline {
  font-size: 90% !important;
  margin-bottom: 15px;
  color: #fff;
}

.comment .meta {
  font-size: 90% !important;
  margin-bottom: .5%;
  opacity: .6;
}

.spacebottom {
  margin-bottom: 100px;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  /* height: 150px; */
  width: 100%;
  color:#FFFFFF; 
  background-color: #ff0d7b;
  font-size:1.5em;
  line-height: 24px;
  text-align: center;
  padding: 15px;
  z-index: 9999;
}

.fab ,.fa-github, .fa-linkedin, .fa-twitter  {
  font-size: 25px;
  padding-right: 15px;
  padding-left: 15px;
}

.welcome {
  color:  #eaef3a;
  letter-spacing: 2px;
  padding: 0px;
  line-height: 0px;
}

.copytech {
  font-size: 12px;
  color: #fa4568;
  letter-spacing: 2px;
}

.copyends {
  font-size: 12px;
  color: #fff;
  letter-spacing: 2px;
}

/* Project Cards */
.card {
  background: #fff;
  border: 1px solid darkblue;
  height: 375px;
  margin: 0rem;
  position: relative;
  width: 325px;
  box-shadow: 0px 0px 30px 20px #eaef3a;
  /* box-shadow: 0 3px 6px #eaef3a, 0 3px 6px #eaef3a; */
  text-align: left;
  margin-bottom: 70px;
}

.card > .img-container {
  height: 35%;
  overflow: hidden;
  text-align: center;
  background-color: darkblue;
  border-bottom: thin solid #000;
  
}

.card > .img-container > img {
  width: 100%;
  /* height: 100%; */
}

.card > .card-header {
  height: 10%;
  font-size: 18px;
  background-color: darkblue;
  text-align: center;
  overflow: hidden;
  /* border-top-right-radius:10%;
  border-top-left-radius:10%; */
}

.card > .content {
  padding-left: 1rem;
  padding-right: 1rem;
  font-size: 12px;
  height: 45%;
}

.card > .content > ul {
  list-style-type: none;
}

.card > .content > ul > li {
  /* margin-top: 18px; */
  line-height: 18px;
  color: #000;
  padding-top: 5px;
  padding-bottom: 5px;
  
}

.card > .card-footer {
  height: 10%;
  font-size: 16px;
  /* background-color: darkblue; */
  text-align: center;
  overflow: hidden;
}

h4 {
  /* border-top-right-radius:10%;
  border-top-left-radius:10%; */
  padding-top: 1%;
  padding-bottom: 2%;
  margin: 0px;
}

h5 {
  padding: 0px;
  margin: 0px;
  color: #000;
}

@media screen and (max-width: 800px)  {
  main {
    padding: 0;
  }

.right {
  font-size: 13px;
}

h1 {
font-size: 12px;
text-align:center;
}

.headmini {
  font-size: 20px;
}

.headbracket {
  font-size: 20px;
}

.head-container {
  width: 100%;
}

body {
  line-height: 20px;
}
p {
  font-size: 15px;
  line-height: 20px;
}

ul {
  display: block;
}

nav li {
  font-size: 15px;
}

}

